Making website more responsive
Editing the top two images on homepage, book now & booking confirmation page so they reduce in size with page

--- a/book-now.html
+++ b/book-now.html
@@ -24,10 +24,10 @@
   </nav>
     <header>
         <div class="book-now-welcome-section">
-        <div class="book-now-welcome-text">
+        <div class="welcome-text">
           <h1>One Step Closer to Your Pet's Purrfect Getaway...</h1>
         </div>
-          <img class="book-now-welcome-image" src="https://i.chzbgr.com/full/9191487744/h720BC861/vac-cat-hotel-spa-china">
+          <img class="welcome-image" src="https://i.chzbgr.com/full/9191487744/h720BC861/vac-cat-hotel-spa-china">
       </div>
       </header>
       <div class="booking-details-section">
