--- a/booking-confirmation.html
+++ b/booking-confirmation.html
@@ -24,11 +24,11 @@
   </nav>
     <header>
         <div class="book-now-welcome-section">
-        <div class="book-now-welcome-text">
+        <div class="welcome-text">
           <h1>Booking Complete!</h1>
           <h2>Your cat's stay will arrive sooner than you can say Meow!</h2>
         </div>
-          <img class="book-now-welcome-image" src="https://i.chzbgr.com/full/9191487744/h720BC861/vac-cat-hotel-spa-china">
+          <img class="welcome-image" src="https://i.chzbgr.com/full/9191487744/h720BC861/vac-cat-hotel-spa-china">
       </div>
       </header>
       <div class="booking-details-section">
